--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 
 .timeline {
   position: relative;
+  background: white;
+  transition: all 0.5s ease;
 }
 .fixed {
   position: fixed;
@@ -128,13 +130,20 @@ h4 {
   height: 100%;
   padding: 15px;
 }
-.white-box {
+.white-background {
   background: white;
   color: black;
+  transition: all 0.5 ease;
 }
-.red-box {
+.red-background {
   background: #F0324B;
   color: white;
+  transition: all 0.5 ease;
+}
+.black-background {
+  background: #F0324B;
+  color: white;
+  transition: all 0.5 ease;
 }
 
 .time {
