--- a/style.css
+++ b/style.css
@@ -100,6 +100,16 @@ h4 {
   margin-top: 2em;
 }
 
+#election_date, #counter {
+  visibility: hidden;
+  opacity: 0;
+}
+#election_date.shown, #counter.shown {
+  visibility: visible;
+  opacity: 100;
+  transition: opacity 0.5s ease;
+}
+
 /* TIMELINE */
 .timeline ul li {
   list-style-type: none;
