--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ h4 {
   list-style-type: none;
   position: relative;
   width: 320px;
-  height: 100vh;
+  /* height: 100vh; */
   margin: 0 auto;
 }
 
@@ -140,7 +140,7 @@ h4 {
   position: relative;
   bottom: 0;
   width: 320px;
-  height: 100%;
+  /* height: 100%; */
   padding: 15px;
 }
 .red-background {
