--- a/style.css
+++ b/style.css
@@ -110,7 +110,13 @@ h4 {
 #election_date.shown, #counter.shown {
   visibility: visible;
   opacity: 100;
-  transition: opacity 0.5s ease;
+  transition: opacity 1s ease;
+}
+
+.mini-timeline {
+  margin-left: -140px;
+  top: 270px;
+  transition: all 1s ease;
 }
 
 /* TIMELINE */
